--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
     </section>
 
     <!-- "reach out" section-->
-    <section id="reach-out">
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class=" section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2861.679920081566!2d-94.00051628415129!3d44.1724563267153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f439e4b6aa9055%3A0x14027438b20e8d78!2s604%20N%20Riverfront%20Dr%2C%20Mankato%2C%20MN%2056001!5e0!3m2!1sen!2sus!4v1646359466260!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2861.679920081566!2d-94.00051628415129!3d44.1724563267153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f439e4b6aa9055%3A0x14027438b20e8d78!2s604%20N%20Riverfront%20Dr%2C%20Mankato%2C%20MN%2056001!5e0!3m2!1sen!2sus!4v1646359466260!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div> 
             <h3>Run Buddy</h3>
