--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
     <!-- hero/jumbotron-->
     <section class="hero">
+        <div hero-cta>
+            <h2>Start Building Habits</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat maiores fuga sequi ipsum et. Enim rem voluptate expedita similique atque culpa ducimus, dolorem aspernatur nisi nam facilis ratione molestiae inventore?
+            </p>
+        </div>
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p> Fill out this form and one of out trainers will schedule a consult</p>
