--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- hero/jumbotron-->
     <section class="hero">
-        <div hero-cta>
+        <div class="hero-cta">
             <h2>Start Building Habits</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat maiores fuga sequi ipsum et. Enim rem voluptate expedita similique atque culpa ducimus, dolorem aspernatur nisi nam facilis ratione molestiae inventore?
