--- a/index.html
+++ b/index.html
@@ -74,14 +74,20 @@
 
     <!-- "what we do" section"-->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
+        </div>
     </section>
     <!-- "what we do" section"-->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2>
+        </div>
         <div>
             <!-- insert this img element-->
             <img src="./assets/images/step-1.svg" alt="" />
@@ -113,7 +119,9 @@
     </section>
     <!-- "meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet the Trainers</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Meet the Trainers</h2>
+        </div>    
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio text-left">
@@ -156,7 +164,9 @@
 
     <!-- "reach out" section-->
     <section id="reach-out" class="contact">
-        <h2 class=" section-title secondary-border">Reach Out</h2>
+        <div class="flex-row">
+            <h2 class=" section-title secondary-border">Reach Out</h2>
+        </div>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2861.679920081566!2d-94.00051628415129!3d44.1724563267153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f439e4b6aa9055%3A0x14027438b20e8d78!2s604%20N%20Riverfront%20Dr%2C%20Mankato%2C%20MN%2056001!5e0!3m2!1sen!2sus!4v1646359466260!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <div class="contach form">
