--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    
 </head>
 <body>
     <!-- navigation -->
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            RUN BUDDY
         </h1>
         <nav>
             <!-- Unordered list elemet-->
@@ -136,7 +138,7 @@
                     <img src="./assets/images/step-4.svg" alt="" />
                 </div>
                 <div class="step-text">    
-                    <h3>Step 4: <span>See Results.</span></h3>
+                    <h3>See Results.</h3>
                     <p>Bi-weekly checkins with your trainer will keep you focused</p>
                 </div>    
             </div>        
